tests/fail/registering/term typed with a pure sort2.mmu
(sort s free )
(term f ((x s)) (s ()))
(def y () (s ()) ((x s)) (f x))
